# AeViz

./: .gitignore  README.md  companion.txt  companions.txt  prova.py  pyproject.toml  requirements.txt  save_angular_mom.py  setup.py  time.h5
.github/: basic-tests.yml
.github/workflows/: basic-tests.yml
AeViz/: AeViz.py  __init__.py
AeViz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
AeViz/AeVizMethods/: GWs.py  __init__.py  aux.py  composition.py  hydro.py  instabilities.py  magnetic_fields.py  neutrinos.py  other_spherical_sym.py  supernova.py  thermo.py
AeViz/cell/: cell.py  ghost.py
AeViz/grid/: grid.py
AeViz/load_utils/: data_load_utils.py  utils.py
AeViz/plot_utils/: figure_utils.py  limits_utils.py  mpl_converters.py  plot_creation.py  plotting_utils.py  utils.py
AeViz/quantities_plotting/: __init__.py  plotting.py  plotting_helpers.py
AeViz/simulation/: __init__.py  composition.py  hydro.py  magnetic_fields.py  simulation.py  thermo.py
AeViz/spherical_harmonics/: spherical_harmonics.py
AeViz/units/: __init__.py  aerray.py  aeseries.py  constants.py  units.py
AeViz/utils/: EMD_utils.py  GW_utiils.py  GW_utils.py  PNS_ang_mom_nu_utils.py  aeviz_utils.py  decorators.py  file_utils.py  kick_vel_utils.py  legendre.py  load_save_mass_ene_utils.py  load_save_radii_utils.py  masses_energies_utils.py  math_utils.py  parfiles.py  path_utils.py  profiles.py  radii_utils.py  spherical_harmonics_radial.py  string_utils.py  tidal_love.py  (+1 more)
cell/: cell.py  ghost.py
load_utils/: data_load_utils.py
plot_utils/: plot_creation.py  plotting_utils.py
quantities_plotting/: __init__.py  plotting.py
simulation/: simulation.py
utils/: GW_utiils.py  math_utils.py  parfiles.py  path_utils.py
(+43 files in other folders)
